		src/devices/Makefile (thanks to Ning Zhao for the tip).
20080222	Adding a DEV_DISK_OFFSET_HIGH32 register, for reading/writing
		the top 32 bits of the offset register (useful for emulated
		32-bit archs), as suggested by Julian Elischer.

==============  RELEASE 0.4.6.3  ==============

20080605	Fixing a corner case in ARM pc-relative loads, which was
		unimplemented before. (Triggered by doing builds of pkgsrc
		stuff inside emulated NetBSD/cats.)
20080610	Applying a patch from Jiri Svoboda, which implements the
		ARM "bkpt" instruction.

==============  RELEASE 0.4.6.4  ==============

20080611	Correcting the ARM pc-relative load fix; the wrong address
		variable was used. Also, the pc-relative _load_ code was
		used for stores as well, which was completely incorrect.
		On ARM, since pc-relative loads are converted into immediate
		movs, on writes to pages that contain such translations, the
		ENTIRE page must be invalidated, not just the 1/32th that
		was code. This has now been implemented.

==============  RELEASE 0.4.6.5  ==============

20080808	Applying a patch from Kiyotaka Inaba which causes an ARM UND
		exception to be generated by the instruction word 0xe6000011,
		which is needed by gdb when running inside the emulator.
		Also enabling ARM UND exceptions for ARM floating point
		instructions (needed by both Linux and NetBSD/arm).
20081103	Fix for a free() bug in bootblock_iso9660.c.
		Updating the OpenBSD/landisk installation instructions from
		4.2 to 4.4, after verifying that it works.
20081104	NOTE: I'm throwing away the C++ rewrite attempt ("0.5.x"),
		moving back gxemul-legacy to gxemul/trunk. The old C++
		rewrite attempt is archived under gxemul/branches/.
20081109	Updating most NetBSD 4.0 install instructions to 4.0.1.

==============  RELEASE 0.4.6.6  ==============

20081114	Adding the M88K 'add' instruction for immediate values
		(add_imm in cpu_m88k_instr.c).
		Continuing on dev_pcc2 (used by mvme187).